--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,1 @@
-<!-- <mat-tree>
-  <mat-tree-node> parent node </mat-tree-node>
-  <mat-tree-node> -- child node1 </mat-tree-node>
-  <mat-tree-node> -- child node2 </mat-tree-node>
-</mat-tree> -->
-
-<h2>Works!</h2>
+<app-categories></app-categories>
